--- a/07week/Checkpoint2/index.html
+++ b/07week/Checkpoint2/index.html
@@ -109,7 +109,7 @@
                     <img src="img/wine3.jpg">
                     <hr>
                     <h2>Foundry Shiraz</h2>
-                    <p id="small">
+                    <p>
                         Aged five years in solid, French Oak barrels sports notes of pepper and blackberry.
                     </p>
                     <button class="shop">Visit Shop</button>
@@ -119,9 +119,9 @@
                     <img src="img/wine6.jpg">
                     <hr>
                     <h2>Foundry Chardonnay</h2>
-                    <p id="small">
-                        A rich fruit palet with subtle Oak influence and a lingering dry, fresh finish.
+                    <p>A rich fruit palet with subtle Oak influence and a lingering dry, fresh finish.
                     </p>
+
                     <button class="shop">Visit Shop</button>
 
                 </div>
@@ -129,7 +129,7 @@
                     <img src="img/wine7.jpg">
                     <hr>
                     <h2>Foundry Cabernet</h2>
-                    <p id="small">
+                    <p>
                         Generous sweet blackcurrant and mulberry character with soft, velvety tannins.</p>
                     <button class="shop">Visit Shop</button>
                 </div>
