added new items to the index

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h1>Week Two</h1>
     <a href="02week/nasa/index.html">NASA</a>
 
-    <section id="weekFour" class="projects">
-    <h1>Week Four</h1>
+    <section id="weekThree" class="projects">
+    <h1>Week Three</h1>
     <a href="04week/01Checkpoint/index.html">Checkpoint #1</a>
     </section>
 
@@ -47,9 +47,22 @@
 
     <section id="weekSeven" class="projects">
     <h1>Week Seven</h1>
-    <a href="07week/checkpointpractice/index.html">checkpoint practice</a>
-    <a href="07week/practice2/index.html">practice again</a>
-    <a href="07week/Checkpoint2/index.html">Checkpoint#2</a> 
+    <a href="07week/Checkpoint2/index.html">Checkpoint#2</a>
+    </section>
+
+    <section id="weekEight" class="projects">
+    <h1>Week Eight</h1>
+
+    </section>
+
+    <section id="weekNine" class="projects">
+    <h1>Week Nine</h1>
+
+    </section>
+
+    <section id="weekTen" class="projects">
+    <h1>Week Ten</h1>
+    <a href="10week/index.html">Portfolio</a>
     </section>
 
   </main>
