added age verification page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section id="weekEight" class="projects">
     <h1>Week Eight</h1>
-
+    <a href="08week/redirect/index.html">Wine Page Redirect</a> 
     </section>
 
     <section id="weekNine" class="projects">
