added index changes

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <section id="weekEight" class="projects">
     <h1>Week Eight</h1>
-    <a href="08week/redirect/index.html">Wine Page Redirect</a> 
+    <a href="08week/redirect/index.html">Wine Page Redirect</a>
     </section>
 
     <section id="weekNine" class="projects">
     <h1>Week Nine</h1>
-
+    <a href="09week/tic-tac-toe/index2.html">Tic-Tac-Toe</a> 
     </section>
 
     <section id="weekTen" class="projects">
