--- a/09week/tic-tac-toe/js/index2.html
+++ b/09week/tic-tac-toe/js/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tic Tac Toe</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div class="row">
@@ -34,16 +34,57 @@ $(document).ready(function)(){
  var playerTurn =  'X';
 
  $('[data-cell]').on('click', function(){
+if($(this).text()=== '') {
    $(this).text(playerTurn);
+   checkForWin();
    if(playerTurn === 'X') {
-     var playerTurn = 'O';
      playerTurn = 'O';
    } else {
   playerTurn = 'X';
 }
-
+}
  });
 
+ function checkforWin() {
+   if(
+
+
+  ($('[data-cell="0"]').text() === playerTurn &&
+  $('[data-cell="3"]').text() === playerTurn &&
+  $('[data-cell="6"]').text() === playerTurn)
+||
+($('[data-cell="1"]').text() === playerTurn &&
+$('[data-cell="4"]').text() === playerTurn &&
+$('[data-cell="7"]').text() === playerTurn)
+||
+($('[data-cell="2"]').text() === playerTurn &&
+$('[data-cell="5"]').text() === playerTurn &&
+$('[data-cell="8"]').text() === playerTurn)
+||
+($('[data-cell="0"]').text() === playerTurn &&
+$('[data-cell="1"]').text() === playerTurn &&
+$('[data-cell="2"]').text() === playerTurn)
+||
+($('[data-cell="3"]').text() === playerTurn &&
+$('[data-cell="4"]').text() === playerTurn &&
+$('[data-cell="5"]').text() === playerTurn)
+||
+($('[data-cell="6"]').text() === playerTurn &&
+$('[data-cell="7"]').text() === playerTurn &&
+$('[data-cell="8"]').text() === playerTurn)
+||
+($('[data-cell="0"]').text() === playerTurn &&
+$('[data-cell="4"]').text() === playerTurn &&
+$('[data-cell="8"]').text() === playerTurn)
+||
+($('[data-cell="2"]').text() === playerTurn &&
+$('[data-cell="4"]').text() === playerTurn &&
+$('[data-cell="6"]').text() === playerTurn)
+) {
+
+$('#announce-winner').text(`Player ${playerTurn} Wins!`)
+ }
+}
 });
 </script>
 </body>
