added new stuff

--- a/10week/index.html
+++ b/10week/index.html
@@ -12,6 +12,7 @@
     <!--CSS file-->
     <link rel="stylesheet" href="css/style.css">
     <!--fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
 </head>
 
@@ -49,18 +50,54 @@
 
                 <!-- /.container -->
         </nav>
-        <!-- hero image and wino quote -->
+
     </header>
     <main>
         <section id="hero" class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <img src="img/alisonlogo.png" class="logo">
-
+                    <p>Web Designer, Artist, Writer</p> 
                 </div>
             </div>
             </div>
         </section>
+
+        <section id="about-me" class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 about-text">
+                  <h1>I am an artist, copy writer, and web designer from California living in Austin,
+                  Texas.</h1>
+                  <p>I am inspired by art, graphic design, and video games. I quickly realized I enjoyed
+                    creating beautiful, simple visuals for telling stories online.</p>
+                </section>
+
+                        <section id="work" class="container-fluid">
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-text">
+                                  <ul>
+                                  <li>Checkpoint 1</li>
+                                  <li>Winery Page</li>
+                                  <li>Tic-Tac-Toe Game</li>
+                                  </ul>
+                        </section>
+
+                            <section id="contact" class="container-fluid">
+                                <div class="row">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contact-text">
+                                      <p>If you want me to collaborate on the design and visual elements
+                                        of your website, please contact me.</p>
+                                    <ul>
+                                    <li>alisondgarcia@gmail.com</li>
+
+                                    <li>linkedin icon</li>
+
+                                    <li>dribble icon</li>
+
+                                    <li> tumblr icon</li>
+                                  </ul>
+                            </section>
+
 
 
     </main>
