added index changes

--- a/10week/index.html
+++ b/10week/index.html
@@ -55,9 +55,9 @@
     <main>
         <section id="hero" class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                <div class="col-xlg col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <img src="img/alisonlogo.png" class="logo">
-                    <p>Web Designer, Artist, Writer</p> 
+                    <p>WEB DESIGN/ ART/ WRITING</p>
                 </div>
             </div>
             </div>
@@ -66,8 +66,8 @@
         <section id="about-me" class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 about-text">
-                  <h1>I am an artist, copy writer, and web designer from California living in Austin,
-                  Texas.</h1>
+                  <h1>I am an artist, copy writer, and web designer
+                  <br>from California living in Austin, Texas.</h1>
                   <p>I am inspired by art, graphic design, and video games. I quickly realized I enjoyed
                     creating beautiful, simple visuals for telling stories online.</p>
                 </section>
