--- a/10week/index.html
+++ b/10week/index.html
@@ -65,38 +65,41 @@
 
         <section id="about-me" class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 about-text">
-                  <h1>I am an artist, copy writer, and web designer
-                  <br>from California living in Austin, Texas.</h1>
-                  <p>I am inspired by art, graphic design, and video games. I quickly realized I enjoyed
-                    creating beautiful, simple visuals for telling stories online.</p>
-                </section>
+                <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
+                </div>
 
-                        <section id="work" class="container-fluid">
-                            <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-text">
-                                  <ul>
-                                  <li>Checkpoint 1</li>
-                                  <li>Winery Page</li>
-                                  <li>Tic-Tac-Toe Game</li>
-                                  </ul>
-                        </section>
+                <div class="col-md-6 col-md-pull-6 about-text">
+                    <h1>I am an artist, copy writer,
+                    <br> and web designer from California living in Austin, Texas.</h1>
+                    <p>I am inspired by art, graphic design, and video games. I quickly realized I enjoyed creating beautiful, simple visuals for telling stories online.</p>
+                </div>
+            </div>
+        </section>
 
-                            <section id="contact" class="container-fluid">
-                                <div class="row">
-                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contact-text">
-                                      <p>If you want me to collaborate on the design and visual elements
-                                        of your website, please contact me.</p>
-                                    <ul>
-                                    <li>alisondgarcia@gmail.com</li>
+        <section id="work" class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-text">
+                    <ul>
+                        <li>Checkpoint 1</li>
+                        <li>Winery Page</li>
+                        <li>Tic-Tac-Toe Game</li>
+                    </ul>
+        </section>
 
-                                    <li>linkedin icon</li>
+        <section id="contact" class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contact-text">
+                    <p>If you want me to collaborate on the design and visual elements of your website, please contact me.</p>
+                    <ul>
+                        <li>alisondgarcia@gmail.com</li>
 
-                                    <li>dribble icon</li>
+                        <li>linkedin icon</li>
 
-                                    <li> tumblr icon</li>
-                                  </ul>
-                            </section>
+                        <li>dribble icon</li>
+
+                        <li> tumblr icon</li>
+                    </ul>
+        </section>
 
 
 
