--- a/10week/index.html
+++ b/10week/index.html
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-xlg col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <img src="img/alisonlogo.png" class="logo">
-                    <p>WEB DESIGN/ ART/ WRITING</p>
+                    <p>ART/ WRITING/ WEB DESIGN</p>
                 </div>
             </div>
             </div>
@@ -66,17 +66,21 @@
         <section id="about-me" class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
+                  <h1>About Me</h1>
                 </div>
 
                 <div class="col-md-6 col-md-pull-6 about-text">
-                    <h1>I am an artist, copy writer,
-                    <br> and web designer from California living in Austin, Texas.</h1>
-                    <p>I am inspired by art, graphic design, and video games. I quickly realized I enjoyed creating beautiful, simple visuals for telling stories online.</p>
+                    <h2>I am an artist, copywriter,
+                    <br> and web designer from Watsonville, California living in Austin, Texas.</h2>
+                    <p>🏄 ---> 🌵 </p>
+                    <p>I am inspired by Modern art, comic books, graphic design, and video games.</p>
+                    <p>I got my introduction to HTML through blogging for personal hobbies as well as work. I quickly realized I wanted to create an entire aesthetic to present my writing on, and the readily available free templates were either too complicated, or too boring, and I had no recourse as to how to change them. And thus began my adventures in web design.</p>
                 </div>
             </div>
         </section>
 
         <section id="work" class="container-fluid">
+          <h1>Work</h1>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-text">
                     <ul>
@@ -88,10 +92,14 @@
 
         <section id="contact" class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contact-text">
-                    <p>If you want me to collaborate on the design and visual elements of your website, please contact me.</p>
+              <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
+                <h1>Contact Me</h1>
+              </div>
+
+              <div class="col-md-6 col-md-pull-6 contact-text">
+                    <p>I enjoy creating beautiful, simple visuals for online storytelling. If you want me to collaborate on the design and visual elements of your website, please contact me.</p>
                     <ul>
-                        <li>alisondgarcia@gmail.com</li>
+                        <li><a href="mailto:alisondgarcia@gmail.com">alisondgarcia@gmail.com</a></li>
 
                         <li>linkedin icon</li>
 
@@ -99,6 +107,8 @@
 
                         <li> tumblr icon</li>
                     </ul>
+                  </div>
+                </div>
         </section>
 
 
