added index copy

--- a/10week/index.html
+++ b/10week/index.html
@@ -97,16 +97,12 @@
               </div>
 
               <div class="col-md-6 col-md-pull-6 contact-text">
-                    <p>I enjoy creating beautiful, simple visuals for online storytelling. If you want me to collaborate on the design and visual elements of your website, please contact me.</p>
-                    <ul>
-                        <li><a href="mailto:alisondgarcia@gmail.com">alisondgarcia@gmail.com</a></li>
+                    <p>I enjoy creating beautiful, simple visuals for online storytelling. Contact me and we can plan the look and feel of the website or design you need.</p>
 
-                        <li>linkedin icon</li>
+                    <p><a href="mailto:alisondgarcia@gmail.com">alisondgarcia@gmail.com</a></p>
 
-                        <li>dribble icon</li>
+                      <p><a href="https://www.linkedin.com/in/alisondgarcia/" target="_blank"><img src="img/linkedin.png"></a> <a href="https://dribbble.com/alisondgarcia" target="_blank"><img src="img/dribble.png"></a> <a href="https://alisondgarcia.tumblr.com/" target="_blank"><img src="img/tumblr.png"></a></p>
 
-                        <li> tumblr icon</li>
-                    </ul>
                   </div>
                 </div>
         </section>
