--- a/10week/index.html
+++ b/10week/index.html
@@ -66,7 +66,7 @@
         <section id="about-me" class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
-                  <h1>About Me</h1>
+                    <h1>About Me</h1>
                 </div>
 
                 <div class="col-md-6 col-md-pull-6 about-text">
@@ -74,37 +74,42 @@
                     <br> and web designer from Watsonville, California living in Austin, Texas.</h2>
                     <p>🏄 ---> 🌵 </p>
                     <p>I am inspired by Modern art, comic books, graphic design, and video games.</p>
-                    <p>I got my introduction to HTML through blogging for personal hobbies as well as work. I quickly realized I wanted to create an entire aesthetic to present my writing on, and the readily available free templates were either too complicated, or too boring, and I had no recourse as to how to change them. And thus began my adventures in web design.</p>
+                    <p>I got my introduction to HTML through blogging for personal hobbies as well as work. I quickly realized I wanted to create an entire aesthetic to present my writing on, and the readily available free templates were either too complicated,
+                        or too boring, and I had no recourse as to how to change them. And thus began my adventures in web design.</p>
                 </div>
             </div>
         </section>
 
         <section id="work" class="container-fluid">
-          <h1>Work</h1>
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 work-text">
-                    <ul>
-                        <li>Checkpoint 1</li>
-                        <li>Winery Page</li>
-                        <li>Tic-Tac-Toe Game</li>
-                    </ul>
+        <div class="row">
+                <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 work">
+                  </div>
+
+                  <div class="col-md-6 col-md-pull-6 work-text">
+                      <h1>Work</h1>
+                </div>
+              </div>
         </section>
 
         <section id="contact" class="container-fluid">
             <div class="row">
-              <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
-                <h1>Contact Me</h1>
-              </div>
+                <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
+                    <h1>Contact Me</h1>
+                </div>
 
-              <div class="col-md-6 col-md-pull-6 contact-text">
+                <div class="col-md-6 col-md-pull-6 contact-text">
                     <p>I enjoy creating beautiful, simple visuals for online storytelling. Contact me and we can plan the look and feel of the website or design you need.</p>
 
                     <p><a href="mailto:alisondgarcia@gmail.com">alisondgarcia@gmail.com</a></p>
 
-                      <p><a href="https://www.linkedin.com/in/alisondgarcia/" target="_blank"><img src="img/linkedin.png"></a> <a href="https://dribbble.com/alisondgarcia" target="_blank"><img src="img/dribble.png"></a> <a href="https://alisondgarcia.tumblr.com/" target="_blank"><img src="img/tumblr.png"></a></p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/alisondgarcia/" target="_blank"><img src="img/linkedin.png"></a>
+                        <a href="https://dribbble.com/alisondgarcia" target="_blank"><img src="img/dribble.png"></a>
+                        <a href="https://alisondgarcia.tumblr.com/" target="_blank"><img src="img/tumblr.png"></a>
+                      </p>
 
-                  </div>
                 </div>
+            </div>
         </section>
 
 
