--- a/10week/index.html
+++ b/10week/index.html
@@ -53,6 +53,8 @@
 
     </header>
     <main>
+        <!-- Icon Image Section -->
+
         <section id="hero" class="container-fluid">
             <div class="row">
                 <div class="col-xlg col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
@@ -66,7 +68,7 @@
         <section id="about-me" class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
-                    <h1>About Me</h1>
+                    <h1>ABOUT ME</h1>
                 </div>
 
                 <div class="col-md-6 col-md-pull-6 about-text">
@@ -80,21 +82,37 @@
             </div>
         </section>
 
+        <!-- My Work Section -->
         <section id="work" class="container-fluid">
-        <div class="row">
-                <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 work">
-                  </div>
-
-                  <div class="col-md-6 col-md-pull-6 work-text">
-                      <h1>Work</h1>
+            <div class="row">
+                <div class="col-sm-4 work-item">
+                    <a href="../../02week/nasa/index.html" target="_blank"><img class="projects-img" src="img/nasa.png" alt=""></a>
+                    <h3>Mock NASA Landing Page</h3>
                 </div>
               </div>
+
+                <div class="row">
+                    <div class="col-sm-4 work-item">
+                        <a href="../../07week/Checkpoint2/index.html" target="_blank"><img class="projects-img" src="img/wine.png" alt=""></a>
+                      <h3>Mock Winery Page</h3>
+                    </div>
+                </div>
+
+
+            <div class="row">
+                <div class="col-sm-4 work-item">
+                    <a href="../../09week/tic-tac-toe/index2.html" target="_blank"><img class="projects-img" src="img/tictactoe.png" alt=""></a>
+                    <h3>Tic-Tac-Toe Game</h3> 
+                </div>
+                </div>
         </section>
+
+        <!-- This is my Contact Section -->
 
         <section id="contact" class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-push-6 col-sm-12 col-xs-12 white-div">
-                    <h1>Contact Me</h1>
+                    <h1>CONTACT ME</h1>
                 </div>
 
                 <div class="col-md-6 col-md-pull-6 contact-text">
@@ -106,13 +124,11 @@
                         <a href="https://www.linkedin.com/in/alisondgarcia/" target="_blank"><img src="img/linkedin.png"></a>
                         <a href="https://dribbble.com/alisondgarcia" target="_blank"><img src="img/dribble.png"></a>
                         <a href="https://alisondgarcia.tumblr.com/" target="_blank"><img src="img/tumblr.png"></a>
-                      </p>
+                    </p>
 
                 </div>
             </div>
         </section>
-
-
 
     </main>
     <!-- JQuery CDN script, always before JS since it cascades -->
